# 3dgs-sim-optimizer

./: .gitignore  README.md  setup.sh
cpp_core/: CMakeLists.txt
cpp_core/src/: gaussian_pruner.cpp
python_prototype/: gaussian_pruner.py  requirements.txt  sh_extractor.py
